<resources>
    <string name="app_name">HTS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">健康即時診斷系統</string>
    <string name="user_id">帳號</string>
    <string name="passwd">密碼</string>
    <string name="login_btn">登入</string>
    <string name="forgot_btn">忘記密碼</string>
    <string name="add_accunt_btn">註冊帳號</string>
    <string name="HTS_btn">非會員即時檢測</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="email">電子信箱</string>
    <string name="name">姓名</string>
    <string name="confirm_passwd">確認密碼</string>
    <string name="title_activity_signinact">signin</string>
    <string name="confirm">確認</string>
    <string name="clear">清除</string>
    <string name="return_menu">返回</string>


</resources>
