<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="50sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:id="@+id/textView"
                android:textSize="100sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:id="@+id/textView2"
                    android:textColor="#000000"
                    android:textSize="50sp"
                    android:singleLine="true"
                    android:textIsSelectable="false" />

                <EditText
                    android:layout_width="500sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/userID"
                    android:textSize="50sp"
                    android:layout_marginLeft="45sp"
                    android:autoText="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwd"
                    android:id="@+id/textView3"
                    android:textSize="50sp"
                    android:textColor="#000000" />

                <EditText
                    android:layout_width="500sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:textSize="50sp"
                    android:textColor="#000000"
                    android:layout_marginLeft="45sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="20sp">

            <Button
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:text="@string/login_btn"
                android:id="@+id/login_btn"
                android:textSize="45sp"
                android:background="@drawable/login"
                android:paddingLeft="60sp" />

            <Button
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:text="@string/add_accunt_btn"
                android:id="@+id/btn_sign"
                android:textSize="45sp"
                android:background="@drawable/signin"
                android:clickable="false"
                android:paddingLeft="70sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right">

            <Button
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:text="@string/forgot_btn"
                android:id="@+id/button2"
                android:textSize="45sp"
                android:background="@drawable/forgotpasswd"
                android:paddingLeft="60sp" />

            <Button
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:text="@string/HTS_btn"
                android:id="@+id/button4"
                android:layout_gravity="right"
                android:textColor="#000000"
                android:textSize="36sp"
                android:background="@drawable/system" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/fra_layout"></FrameLayout>

</RelativeLayout>
